# ZeroAoPleno

./: README.md
modulo01/src/: main.rs
modulo02/: Cargo.toml
modulo02/src/: bank.rs  block.rs  coin.rs  main.rs
modulo03/: Cargo.toml  rust_wiki.txt  socorro.txt
modulo03/src/: bank.rs  doenca.rs  finance.rs  imobiliaria.rs  main.rs  metodo.rs  operations.rs  shapes.rs
modulo04/: Cargo.toml  dados.txt
modulo04/src/: caca_palavras.rs  it.rs  lib.rs  main.rs  viagens.rs
modulo05/: Cargo.toml  nums.txt  nums_desodenados.txt
modulo05/src/: main.rs  solutions.rs
modulo06/: Cargo.toml  input.txt
modulo06/src/: main.rs
modulo06_bibliotecas/comprimentos/: Cargo.toml
modulo06_bibliotecas/division_zero/: Cargo.toml
modulo06_bibliotecas/game_cards/: Cargo.toml
modulo06_bibliotecas/geometry_2d/: Cargo.toml
modulo06_bibliotecas/iter_theard/: Cargo.toml
modulo06_bibliotecas/listas/: Cargo.toml
modulo06_bibliotecas/maior_str/: Cargo.toml
modulo06_bibliotecas/media_type/: Cargo.toml
modulo07/: Cargo.toml
modulo07/src/: main.rs
modulo10/api_clima_tempo/: Cargo.toml
modulo10/api_criar_e_pegar_usuarios/: Cargo.toml
modulo10/api_criar_usuarios/: Cargo.toml
modulo10/api_tarefas/: Cargo.toml
modulo10/api_tarefas_rest/: Cargo.toml
modulo10/autenticacao_simples/: Cargo.toml
modulo10/endpoint_json/: Cargo.toml
modulo10/formulario/: Cargo.toml
modulo10/formulario/src/: main.rs
modulo10/http_status/: Cargo.toml
modulo10/iniciando_rocket/: Cargo.toml
modulo10/metodos_http/: Cargo.toml
modulo10/parametros_de_consulta/: Cargo.toml
(+61 files in other folders)
