[package]
name = "modulo06"
version = "0.1.0"
edition = "2024"

[dependencies]
ordinal= "0.3"
rand = "*"
rayon = "*"
tokio = { version = "*", features=["full"] }
reqwest = "*"
anyhow = "*"
comprimentos = { path = "../modulo06_bibliotecas/comprimentos" }
todo = { path = "../modulo06_bibliotecas/todo" }
